# EP2

./: .gitignore  CMakeLists.txt  README.md  glass_test.py
RockAndRuck/: Makefile  generator.py  problem.tex  solution.cpp  solution.tex  tester  tester.c  tester.py
RockAndRuck/tests/: 01.in  02.in  02.out
src/: angry.cpp  bicolor.cpp  bullet.cpp  cast.cpp  drink.cpp  euler.cpp  fence.cpp  freckles.cpp  glass.cpp  gopher.cpp  guide.cpp  jeskyne.cpp  keys.cpp  miska.cpp  miska2.cpp  oil.cpp  routing.cpp  solitaire.cpp  spojka.cpp  toll.cpp  triangular.cpp  words.cpp
src/test/cast/: 1.in  3.in  5.in  6.in
src/test/glass/: 1.in
src/test/jeskyne/: 1.in
src/test/routing/: 1.in
src/test/triangular/: 1.in
