cmake_minimum_required(VERSION 3.25)
project(EP2)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-pedantic -Wall")

#add_executable(cast src/cast.cpp)
#add_executable(jeskyne src/jeskyne.cpp)
#add_executable(routing src/routing.cpp)
#add_executable(triangular src/triangular.cpp)

#add_executable(keys src/keys.cpp)
#add_executable(drink src/drink.cpp)
#add_executable(bicolor src/bicolor.cpp)
#add_executable(solitaire src/solitaire.cpp)

#add_executable(freckles src/freckles.cpp)
#add_executable(glass src/glass.cpp)
#add_executable(guide src/guide.cpp)
#add_executable(toll src/toll.cpp)

#add_executable(angry src/angry.cpp)
#add_executable(euler src/euler.cpp)
#add_executable(gopher src/gopher.cpp)
#add_executable(words src/words.cpp)

#add_executable(bullet src/bullet.cpp)
#add_executable(fence src/fence.cpp)
add_executable(oil src/oil.cpp)
add_executable(miska src/miska.cpp)
add_executable(miska2 src/miska2.cpp)
#add_executable(spojka src/spojka.cpp)

add_executable(RockAndRuck RockAndRuck/solution.cpp)
